--- a/UnitTestCrownAndAnchor/UnitTestCrownAndAnchor.csproj
+++ b/UnitTestCrownAndAnchor/UnitTestCrownAndAnchor.csproj
@@ -88,6 +88,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="AutoNSubstituteDataAttribute.cs" />
+    <Compile Include="PlayerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WinningsTest.cs" />
   </ItemGroup>
