--- a/UnitTestCrownAndAnchor/UnitTestCrownAndAnchor.csproj
+++ b/UnitTestCrownAndAnchor/UnitTestCrownAndAnchor.csproj
@@ -90,6 +90,7 @@
     <Compile Include="AutoNSubstituteDataAttribute.cs" />
     <Compile Include="PlayerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RandomnessTest.cs" />
     <Compile Include="WinningsTest.cs" />
   </ItemGroup>
   <ItemGroup>
